# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  generate_diff.py  parser.py  stylish.py
gendiff/formats/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: test_json.txt
